cluster/core/rook-ceph/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  ingressClassName: "traefik"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/icon: "weather-sunset"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  tls:
    - hosts:
        - "rook.${SECRET_DOMAIN}"
      secretName: "rook-tls"
  rules:
    - host: "rook.${SECRET_DOMAIN}"
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rook-ceph-mgr-dashboard
              port:
                name: http-dashboard
